methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:8: error: not found: value vu
        vu Biscuit=true
        ^MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
    for (c2<- 1 to 6){
           ^